# nav2_rrt_astar_exploration

./: .dockerignore  .gitignore  Dockerfile  README.md  refactor_cli.py
docker/: entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
maps/: README.md
navigation_model/: MODEL_MANIFEST.sha256  README.md  td3_step_1054.pth  td3_step_1125.pth  td3_step_1195.pth  td3_step_1200.pth  td3_step_122.pth  td3_step_1255.pth  td3_step_1363.pth  td3_step_141.pth  td3_step_230.pth  td3_step_2400.pth  td3_step_249.pth  td3_step_303.pth  td3_step_3600.pth  td3_step_373.pth  td3_step_443.pth  td3_step_507.pth  td3_step_611.pth  td3_step_681.pth  td3_step_71.pth  td3_step_751.pth  td3_step_824.pth  td3_step_894.pth  td3_step_982.pth
scripts/: build_rl_base_clean_venv.sh  docker_build.sh  docker_run_sim.sh  docker_run_stretch3.sh  launch_rl_base_clean_venv.sh  launch_rl_base_gui_clean_venv.sh  (+5 more)
src/goal_seeker_rl/: package.xml  setup.cfg  setup.py
src/goal_seeker_rl/config/: slam_realsense_mapper.yaml
src/goal_seeker_rl/goal_seeker_rl/: __init__.py  environment_node.py  hrl_global_planner.py  main_node.py  networks.py  rl_local_driver.py  td3_agent.py
src/goal_seeker_rl/launch/: start_goal_seeker.launch.py  start_goal_seeker_stretch.launch.py  start_hrl_navigation.launch.py  start_rl_base_navigation.launch.py  start_stretch3_far_planner.launch.py
src/goal_seeker_rl/models/turtlebot3_waffle/: model.sdf
src/goal_seeker_rl/resource/: goal_seeker_rl
src/goal_seeker_rl/rviz/: nav_config.rviz  rl_base_config.rviz  stretch_nav_config.rviz
src/goal_seeker_rl/urdf/: turtlebot3_waffle_minimal.urdf
src/goal_seeker_rl/worlds/: goal_seeker_large_dynamic.world
src/mapless_nav2/: README.md  package.xml  setup.cfg  setup.py
src/mapless_nav2/behavior_trees/: explore_goal_switch_nav.xml
src/mapless_nav2/config/: exploration_manager.yaml  nav2_frontier_exploration_params.yaml  nav2_mapless_params.yaml  slam_toolbox_online_async.yaml
src/mapless_nav2/launch/: frontier_explore_tb3.launch.py  mapless_tb3_sim.launch.py
src/mapless_nav2/mapless_nav2/: exploration_coordinator.py  exploration_memory.py  exploration_types.py  frontier_extractor.py  frontier_scoring.py  map_utils.py  mapless_goal_manager.py  optional_learned_ranker.py  scan_stabilizer.py  send_goal.py
src/mapless_nav2/models/turtlebot3_waffle_45deg/: model-1_4.sdf  model.config  model.sdf
src/mapless_nav2/resource/: mapless_nav2
src/mapless_nav2/rviz/: frontier_explore.rviz  mapless_nav2.rviz
src/mapless_nav2/tests/: test_frontier_scoring.py  test_memory.py
(+28 files in other folders)
